k8s/infra/longhorn-system/longhorn-core/base/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  hostnames:
    - longhorn.example.com
  parentRefs:
    - kind: Gateway
      name: internal
      namespace: gateway-api
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: longhorn-frontend
          group: ""
          port: 80
          weight: 1
